<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.intentspractice.MainActivity"
    android:background="@android:color/black"
    tools:ignore="MergeRootFrame" >

    

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:hint="@string/enter_time_in_seconds"
        android:layout_marginTop="104dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="23dp"
         android:onClick="setAlarm"
         android:text="@string/set" />

     <Button
         android:id="@+id/buttonStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editText"
         android:onClick="stopAlarm"
         android:layout_marginRight="35dp"
         android:layout_marginTop="24dp"
         android:text="@string/stop" />

</RelativeLayout>
